--- a/Quest_0108/DS1_230108.ipynb
+++ b/Quest_0108/DS1_230108.ipynb
@@ -19,7 +19,7 @@
       "source": [
         "import random\n",
         "from datetime import datetime\n",
-        "\n",
+        "from time import strftime\n",
         "\n",
         "class Account:\n",
         "    def __init__(self, owner, balance):\n",
@@ -105,7 +105,8 @@
         "        \"\"\"\n",
         "        for record in self.deposit_record:\n",
         "            time, type, amount = record\n",
-        "            print(f\"{time} - {type}: {amount:,}원\")\n",
+        "            time_str = time.strftime(\"%Y-%m-%d %I:%M:%S %p\")\n",
+        "            print(f\"{time_str} - {type}: {amount:,}원\")\n",
         "\n",
         "    def withdraw_history(self):\n",
         "        \"\"\"\n",
@@ -113,7 +114,8 @@
         "        \"\"\"\n",
         "        for record in self.withdraw_record:\n",
         "            time, type, amount = record\n",
-        "            print(f\"{time} - {type}: {amount:,}원\")\n",
+        "            time_str = time.strftime(\"%Y-%m-%d %I:%M:%S %p\")\n",
+        "            print(f\"{time_str} - {type}: {amount:,}원\")\n",
         "\n",
         "    def all_history(self):\n",
         "        \"\"\"\n",
@@ -123,7 +125,8 @@
         "            self.deposit_record + self.withdraw_record, key=lambda x: x[0])\n",
         "        for record in all_transaction:\n",
         "            time, type, amount = record\n",
-        "            print(f\"{time} - {type}: {amount:,}원\")\n",
+        "            time_str = time.strftime(\"%Y-%m-%d %I:%M:%S %p\")\n",
+        "            print(f\"{time_str} - {type}: {amount:,}원\")\n",
         "        print(\"잔고: {:,}원\".format(self.balance))\n",
         "\n",
         "    def get_withdraw_limit(self):\n",
@@ -152,7 +155,7 @@
       "metadata": {
         "id": "yg17QAc8JQbx"
       },
-      "execution_count": 48,
+      "execution_count": 75,
       "outputs": []
     },
     {
@@ -167,15 +170,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2-7YjGYBMC27",
-        "outputId": "3f9fbcac-4cc7-440f-9224-701365e257dc"
+        "outputId": "15e8d20b-d44a-4234-8d1e-47a71c1efb01"
       },
-      "execution_count": 52,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "은행이름: SC은행, 예금주: 손흥민, 계좌번호: 953-50-416786, 잔고: 1,000,000원\n"
+            "은행이름: SC은행, 예금주: 손흥민, 계좌번호: 047-09-576781, 잔고: 1,000,000원\n"
           ]
         }
       ]
@@ -193,16 +196,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vv7bMCguMDGW",
-        "outputId": "38cd9904-1e0b-448c-c37e-59cf5d08d179"
+        "outputId": "2324b576-8180-4f46-cce7-7e1374246987"
       },
-      "execution_count": 53,
+      "execution_count": 77,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "은행이름: SC은행, 예금주: 손흥민, 계좌번호: 953-50-416786, 잔고: 2,000,000원\n",
-            "2024-01-08 05:16:59.184082 - 입금: 1,000,000원\n"
+            "은행이름: SC은행, 예금주: 손흥민, 계좌번호: 047-09-576781, 잔고: 2,000,000원\n",
+            "2024-01-08 06:02:49 AM - 입금: 1,000,000원\n"
           ]
         }
       ]
@@ -220,16 +223,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Zp4CxjzjMDMr",
-        "outputId": "a0678cca-b291-4a7c-f067-d49e0489eaf7"
+        "outputId": "080a1803-4b5d-4089-efec-ff2ad2b79e25"
       },
-      "execution_count": 54,
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "은행이름: SC은행, 예금주: 손흥민, 계좌번호: 953-50-416786, 잔고: 1,000,000원\n",
-            "2024-01-08 05:17:02.736903 - 출금: 1,000,000원\n"
+            "은행이름: SC은행, 예금주: 손흥민, 계좌번호: 047-09-576781, 잔고: 1,000,000원\n",
+            "2024-01-08 06:02:55 AM - 출금: 1,000,000원\n"
           ]
         }
       ]
@@ -245,9 +248,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ih2o2jKBM4t0",
-        "outputId": "6835fda3-b0f8-404c-bb8c-231fc955d2f1"
+        "outputId": "01000b19-10eb-421c-caf7-196c6953d935"
       },
-      "execution_count": 55,
+      "execution_count": 79,
       "outputs": [
         {
           "output_type": "stream",
@@ -269,15 +272,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zAYzR9aZNCWO",
-        "outputId": "814c318a-9319-431f-bbcb-c75d9906ae64"
+        "outputId": "92152d16-614a-4fd4-93a0-4dc35be2d405"
       },
-      "execution_count": 56,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "은행이름: SC은행, 예금주: 손흥민, 계좌번호: 953-50-416786, 잔고: 1,000,000원\n"
+            "은행이름: SC은행, 예금주: 손흥민, 계좌번호: 047-09-576781, 잔고: 1,000,000원\n"
           ]
         }
       ]
@@ -301,18 +304,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EWxA8RmAPoCe",
-        "outputId": "679ea844-3e75-413a-ad7b-bdf97864d7ad"
+        "outputId": "cc271501-1325-405d-d317-9232a5fbac80"
       },
-      "execution_count": 57,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "은행이름: SC은행, 예금주: 손흥민, 계좌번호: 953-50-416786, 잔고: 2,000,000원\n",
-            "은행이름: SC은행, 예금주: 손흥민, 계좌번호: 953-50-416786, 잔고: 3,000,000원\n",
-            "은행이름: SC은행, 예금주: 손흥민, 계좌번호: 953-50-416786, 잔고: 4,000,000원\n",
-            "은행이름: SC은행, 예금주: 손흥민, 계좌번호: 953-50-416786, 잔고: 5,050,000.0원\n"
+            "은행이름: SC은행, 예금주: 손흥민, 계좌번호: 047-09-576781, 잔고: 2,000,000원\n",
+            "은행이름: SC은행, 예금주: 손흥민, 계좌번호: 047-09-576781, 잔고: 3,000,000원\n",
+            "은행이름: SC은행, 예금주: 손흥민, 계좌번호: 047-09-576781, 잔고: 4,000,000원\n",
+            "은행이름: SC은행, 예금주: 손흥민, 계좌번호: 047-09-576781, 잔고: 5,050,000.0원\n"
           ]
         }
       ]
@@ -328,9 +331,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "O4m9RyDSQIB6",
-        "outputId": "061a6542-f2a0-4359-8c20-b5b420d07656"
+        "outputId": "1b947284-4dcf-4eb3-aa5a-2ef3c08b7b51"
       },
-      "execution_count": 58,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "stream",
@@ -352,20 +355,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5JiippBwQMED",
-        "outputId": "3ff2addd-917e-4afe-f97b-2c635c214167"
+        "outputId": "e04f4cc5-09f5-4283-e717-9bad64c3965c"
       },
-      "execution_count": 59,
+      "execution_count": 83,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2024-01-08 05:16:59.184082 - 입금: 1,000,000원\n",
-            "2024-01-08 05:17:02.736903 - 출금: 1,000,000원\n",
-            "2024-01-08 05:18:06.553684 - 입금: 1,000,000원\n",
-            "2024-01-08 05:18:06.555481 - 입금: 1,000,000원\n",
-            "2024-01-08 05:18:06.555653 - 입금: 1,000,000원\n",
-            "2024-01-08 05:18:06.555795 - 입금: 1,000,000원\n",
+            "2024-01-08 06:02:49 AM - 입금: 1,000,000원\n",
+            "2024-01-08 06:02:55 AM - 출금: 1,000,000원\n",
+            "2024-01-08 06:03:07 AM - 입금: 1,000,000원\n",
+            "2024-01-08 06:03:07 AM - 입금: 1,000,000원\n",
+            "2024-01-08 06:03:07 AM - 입금: 1,000,000원\n",
+            "2024-01-08 06:03:07 AM - 입금: 1,000,000원\n",
             "잔고: 5,050,000.0원\n"
           ]
         }
@@ -382,15 +385,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OJFxvvExQQCO",
-        "outputId": "042e2283-df2a-439a-cd18-ca1192b8bd9b"
+        "outputId": "3ad97bc1-14e9-4569-8803-f51e16067566"
       },
-      "execution_count": 61,
+      "execution_count": 86,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1회 출금 한도를 입력하세요, 초기 한도는 500만원 입니다.머낭ㄹ\n",
+            "1회 출금 한도를 입력하세요, 초기 한도는 500만원 입니다.34ㄴㅎ\n",
             "오류 : 잘못된 입력입니다. 숫자를 입력하세요. 출금한도 설정을 취소합니다.\n"
           ]
         }
@@ -407,15 +410,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "v5KVCAbcg2pw",
-        "outputId": "8278ca62-e8e7-452b-cb33-dc1d2b7e3b40"
+        "outputId": "304d3ef9-2b65-4537-d1e8-fcac7340d1b2"
       },
-      "execution_count": 62,
+      "execution_count": 85,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1회 출금 한도를 입력하세요, 초기 한도는 500만원 입니다.-24\n",
+            "1회 출금 한도를 입력하세요, 초기 한도는 500만원 입니다.-134\n",
             "오류 : 음수 값은 허용되지 않습니다. 출금한도 설정을 취소합니다.\n"
           ]
         }
