--- a/Quest_0108/DS1_230108.ipynb
+++ b/Quest_0108/DS1_230108.ipynb
@@ -68,6 +68,8 @@
         "            self.count += 1\n",
         "            if self.count % 5 == 0:\n",
         "                self.balance *= 1.01\n",
+        "                self.balance = int(self.balance),
+
         "\n",
         "            # 입금 내역 기록\n",
         "            transaction_time = datetime.now()\n",
