--- a/Quest_0111/News_crawler_project_.ipynb
+++ b/Quest_0111/News_crawler_project_.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e1f5375d",
+   "id": "aa58dc16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "35213637",
+   "id": "90d3c075",
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c307074c",
+   "id": "925d15e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "de765daf",
+   "id": "60386fb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6b8d824c",
+   "id": "8dd90e5f",
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5a8ae96f",
+   "id": "29cd113f",
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6c81f7f6",
+   "id": "0cd089e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "79c7dec0",
+   "id": "0f4b3fce",
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afd84ada",
+   "id": "27ee1fba",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "3f703a72",
+   "id": "d4c09a94",
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "aaefdda8",
+   "id": "442daa0a",
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e4b34229",
+   "id": "b491c396",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "9f6b6aa6",
+   "id": "3ce5f407",
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "12457f9a",
+   "id": "a4111081",
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "857a85b1",
+   "id": "85452b17",
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "909e185a",
+   "id": "4c76831a",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "fdbc01d8",
+   "id": "cf197a9a",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "c664be45",
+   "id": "8d9fc78f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "eb1d376a",
+   "id": "929eb7fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "d7b075f3",
+   "id": "3357e753",
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "d23a8e0a",
+   "id": "ff0b4a8e",
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "8b305e58",
+   "id": "6f58b12e",
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "eb8b7b95",
+   "id": "8348995b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "2cc0a970",
+   "id": "3560d587",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "c04bafb9",
+   "id": "cc0d8dc5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "f0b58345",
+   "id": "543c1264",
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "9ad2292f",
+   "id": "d4244c4b",
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "9f4df63c",
+   "id": "262875f7",
    "metadata": {},
    "outputs": [
     {
@@ -1874,7 +1874,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "27768719",
+   "id": "8aba0e57",
    "metadata": {},
    "outputs": [
     {
@@ -1909,7 +1909,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "ad31f239",
+   "id": "66f8cce9",
    "metadata": {},
    "outputs": [
     {
@@ -1927,7 +1927,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "718b2b43",
+   "id": "045eb68b",
    "metadata": {},
    "outputs": [
     {
@@ -1945,7 +1945,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "2a0975a4",
+   "id": "db435c8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1959,7 +1959,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "f68c8a3a",
+   "id": "8eef0e44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1969,7 +1969,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "11bd8ec9",
+   "id": "f5662b4c",
    "metadata": {},
    "outputs": [
     {
@@ -1993,7 +1993,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "6cfe32c9",
+   "id": "2c99841e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2013,7 +2013,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "7627cb61",
+   "id": "eaca49f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2026,7 +2026,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "3ee7070f",
+   "id": "117e2837",
    "metadata": {},
    "outputs": [
     {
@@ -2048,7 +2048,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "a60ab4db",
+   "id": "1ec82e49",
    "metadata": {},
    "outputs": [
     {
@@ -2069,7 +2069,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "fcb673b7",
+   "id": "c4c57df0",
    "metadata": {},
    "outputs": [
     {
@@ -2090,7 +2090,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "104c27df",
+   "id": "31fa3b84",
    "metadata": {},
    "outputs": [
     {
@@ -2117,7 +2117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f7190b4",
+   "id": "b2e48bed",
    "metadata": {},
    "source": [
     "### 새로운 날짜데이터 추가 함수"
@@ -2126,7 +2126,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "5f530933",
+   "id": "fd93b9fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2168,7 +2168,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "ee2283ad",
+   "id": "e1fd2d46",
    "metadata": {},
    "outputs": [
     {
@@ -2190,7 +2190,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "6208027c",
+   "id": "1e43ec12",
    "metadata": {},
    "outputs": [
     {
@@ -2208,7 +2208,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "fad91f88",
+   "id": "d12aa70f",
    "metadata": {},
    "outputs": [
     {
@@ -2285,7 +2285,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "ab4967d7",
+   "id": "6aa474d0",
    "metadata": {},
    "outputs": [
     {
@@ -2318,7 +2318,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "3fe326b0",
+   "id": "0cd92bbf",
    "metadata": {},
    "outputs": [
     {
@@ -2345,7 +2345,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "60f185d3",
+   "id": "8fd307a3",
    "metadata": {},
    "outputs": [
     {
@@ -2365,7 +2365,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "cca704df",
+   "id": "bddcf69b",
    "metadata": {},
    "outputs": [
     {
@@ -2401,7 +2401,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "301c2f99",
+   "id": "534a9aa0",
    "metadata": {},
    "outputs": [
     {
@@ -2422,7 +2422,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "3cd6f0b5",
+   "id": "4b7ddee3",
    "metadata": {},
    "outputs": [
     {
@@ -2459,7 +2459,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "d327ad4d",
+   "id": "852076a5",
    "metadata": {},
    "outputs": [
     {
@@ -2477,7 +2477,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "71ed0203",
+   "id": "175d88ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2487,7 +2487,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "4bba2f4f",
+   "id": "abf72cd2",
    "metadata": {},
    "outputs": [
     {
@@ -2511,7 +2511,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "4b286d67",
+   "id": "fe1c6a2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2527,7 +2527,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "e2a0b7f2",
+   "id": "230bf899",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2540,7 +2540,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "3cee2f9e",
+   "id": "1943837c",
    "metadata": {},
    "outputs": [
     {
@@ -2568,7 +2568,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "69d3a438",
+   "id": "182c45ef",
    "metadata": {},
    "outputs": [
     {
@@ -2591,7 +2591,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "deb45486",
+   "id": "fc054c37",
    "metadata": {},
    "outputs": [
     {
@@ -2609,7 +2609,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "d9347f43",
+   "id": "5bda0f79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2620,7 +2620,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "dcd74f2c",
+   "id": "fd9e9b30",
    "metadata": {},
    "outputs": [
     {
@@ -2638,7 +2638,7 @@
   {
    "cell_type": "code",
    "execution_count": 188,
-   "id": "9fe3730a",
+   "id": "390b4349",
    "metadata": {},
    "outputs": [
     {
@@ -2671,7 +2671,7 @@
   {
    "cell_type": "code",
    "execution_count": 189,
-   "id": "ae8dad80",
+   "id": "5e85403e",
    "metadata": {},
    "outputs": [
     {
@@ -2697,7 +2697,7 @@
   {
    "cell_type": "code",
    "execution_count": 190,
-   "id": "5bf2a36a",
+   "id": "c197b47f",
    "metadata": {},
    "outputs": [
     {
@@ -2716,7 +2716,7 @@
   {
    "cell_type": "code",
    "execution_count": 191,
-   "id": "b88284a2",
+   "id": "e3d36a4e",
    "metadata": {},
    "outputs": [
     {
@@ -2753,7 +2753,7 @@
   {
    "cell_type": "code",
    "execution_count": 192,
-   "id": "1ceae986",
+   "id": "2c511700",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2763,7 +2763,7 @@
   {
    "cell_type": "code",
    "execution_count": 193,
-   "id": "997a2987",
+   "id": "fdfff873",
    "metadata": {},
    "outputs": [
     {
@@ -2787,7 +2787,7 @@
   {
    "cell_type": "code",
    "execution_count": 194,
-   "id": "b92d4ed7",
+   "id": "a3702c98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2806,7 +2806,7 @@
   {
    "cell_type": "code",
    "execution_count": 195,
-   "id": "58fe92c3",
+   "id": "a9303bf5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2833,7 +2833,7 @@
   {
    "cell_type": "code",
    "execution_count": 196,
-   "id": "f22bca99",
+   "id": "7a28c6ed",
    "metadata": {},
    "outputs": [
     {
@@ -2852,7 +2852,7 @@
   {
    "cell_type": "code",
    "execution_count": 197,
-   "id": "fbbee9a2",
+   "id": "2f504219",
    "metadata": {},
    "outputs": [
     {
@@ -2877,7 +2877,7 @@
   {
    "cell_type": "code",
    "execution_count": 198,
-   "id": "2f4047d1",
+   "id": "685c5bd3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2893,7 +2893,7 @@
   {
    "cell_type": "code",
    "execution_count": 199,
-   "id": "68bc7d94",
+   "id": "0f769673",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2906,7 +2906,7 @@
   {
    "cell_type": "code",
    "execution_count": 200,
-   "id": "58e28d63",
+   "id": "55d41f9e",
    "metadata": {},
    "outputs": [
     {
@@ -2934,7 +2934,7 @@
   {
    "cell_type": "code",
    "execution_count": 201,
-   "id": "ae0e8058",
+   "id": "2fae528a",
    "metadata": {},
    "outputs": [
     {
@@ -2971,7 +2971,7 @@
   {
    "cell_type": "code",
    "execution_count": 202,
-   "id": "5d5eb8aa",
+   "id": "14ff6468",
    "metadata": {},
    "outputs": [
     {
@@ -3008,7 +3008,7 @@
   {
    "cell_type": "code",
    "execution_count": 203,
-   "id": "87c5d750",
+   "id": "c3029191",
    "metadata": {},
    "outputs": [
     {
@@ -3058,7 +3058,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55e0af8c",
+   "id": "c55d5a8b",
    "metadata": {},
    "source": [
     "### 프로젝트 회고\n",
@@ -3078,21 +3078,22 @@
     "다른 그루들과도 계속해서 얘기해보았는데 공통적으로 어려운 점들이라고 하면 널값, 데이터 로딩, 불용어 추가 등… 데이터를 넣고 뺴고 같이 진행했고 데이터 공유도 함께 해보았다. 다른 모델로도 돌려봤는데 크게 오르진 않아서 다함께 논의해보고 여러 방향을 찾아가는 과정이 즐거웠다. 오늘은 코딩하느라 생각을 많이 했는데 다음에는 다른 방법과 이론에 대해서도 같이 얘기해보고 싶다. 그루들과 \n"
    ]
   },
-{
+  {
    "cell_type": "markdown",
-   "id": "55e0af8c",
+   "id": "aef54d69",
    "metadata": {},
    "source": [
-    "### 프로젝트 회고2\n",
+    "### 추가\n",
+    "그리고 내부에 카테고리를 4개로 하니 정치분야는 90이 넘기도 하였다! \n",
+    "역시 정치파트가 가장 특징이 강한가보다!\n",
     "\n",
-    "\n",
-    "그리고 카테고리를 4개로 추가하니 정치분야는 90이 넘기도 하였따!! 역시 정치분야가 가장 특징이 두드러지나보다",
+    "https://github.com/inseonseo/AIFFEL_Quest/blob/main/Quest_0111/News_category4.ipynb"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cbadbf5",
+   "id": "c928f54c",
    "metadata": {},
    "outputs": [],
    "source": []
