main_quest_project

--- a/Quest_0108/DS1_230108.ipynb
+++ b/Quest_0108/DS1_230108.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyM7wsG5D4l1rg/9PmK7pvkW",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/inseonseo/AIFFEL_Quest/blob/main/DS1_230108.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "source": [
@@ -68,8 +80,7 @@
         "            self.count += 1\n",
         "            if self.count % 5 == 0:\n",
         "                self.balance *= 1.01\n",
-        "                self.balance = int(self.balance),
-
+        "                self.balance = int(self.balance)\n",
         "\n",
         "            # 입금 내역 기록\n",
         "            transaction_time = datetime.now()\n",
@@ -157,7 +168,7 @@
       "metadata": {
         "id": "yg17QAc8JQbx"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -172,15 +183,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2-7YjGYBMC27",
-        "outputId": "15e8d20b-d44a-4234-8d1e-47a71c1efb01"
+        "outputId": "4e37dfb0-8e56-4199-ea0a-4db2c90eb687"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "은행이름: SC은행, 예금주: 손흥민, 계좌번호: 047-09-576781, 잔고: 1,000,000원\n"
+            "은행이름: SC은행, 예금주: 손흥민, 계좌번호: 472-66-931799, 잔고: 1,000,000원\n"
           ]
         }
       ]
@@ -198,16 +209,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vv7bMCguMDGW",
-        "outputId": "2324b576-8180-4f46-cce7-7e1374246987"
+        "outputId": "d69b550b-c240-4bab-a5d2-7362cd468840"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "은행이름: SC은행, 예금주: 손흥민, 계좌번호: 047-09-576781, 잔고: 2,000,000원\n",
-            "2024-01-08 06:02:49 AM - 입금: 1,000,000원\n"
+            "은행이름: SC은행, 예금주: 손흥민, 계좌번호: 472-66-931799, 잔고: 2,000,000원\n",
+            "2024-01-08 07:40:43 AM - 입금: 1,000,000원\n"
           ]
         }
       ]
@@ -225,16 +236,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Zp4CxjzjMDMr",
-        "outputId": "080a1803-4b5d-4089-efec-ff2ad2b79e25"
+        "outputId": "cdc3119d-f515-4a3d-a147-0a0394d1bc1b"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "은행이름: SC은행, 예금주: 손흥민, 계좌번호: 047-09-576781, 잔고: 1,000,000원\n",
-            "2024-01-08 06:02:55 AM - 출금: 1,000,000원\n"
+            "은행이름: SC은행, 예금주: 손흥민, 계좌번호: 472-66-931799, 잔고: 1,000,000원\n",
+            "2024-01-08 07:40:46 AM - 출금: 1,000,000원\n"
           ]
         }
       ]
@@ -250,9 +261,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ih2o2jKBM4t0",
-        "outputId": "01000b19-10eb-421c-caf7-196c6953d935"
+        "outputId": "15602dad-c9f7-4b78-86d0-3b977add58d2"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -274,15 +285,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zAYzR9aZNCWO",
-        "outputId": "92152d16-614a-4fd4-93a0-4dc35be2d405"
+        "outputId": "41cae042-9d4e-450f-acd2-92b270d71d67"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "은행이름: SC은행, 예금주: 손흥민, 계좌번호: 047-09-576781, 잔고: 1,000,000원\n"
+            "은행이름: SC은행, 예금주: 손흥민, 계좌번호: 472-66-931799, 잔고: 1,000,000원\n"
           ]
         }
       ]
@@ -306,18 +317,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EWxA8RmAPoCe",
-        "outputId": "cc271501-1325-405d-d317-9232a5fbac80"
+        "outputId": "5da617ca-5919-4c91-b2b4-8415c73ca6af"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "은행이름: SC은행, 예금주: 손흥민, 계좌번호: 047-09-576781, 잔고: 2,000,000원\n",
-            "은행이름: SC은행, 예금주: 손흥민, 계좌번호: 047-09-576781, 잔고: 3,000,000원\n",
-            "은행이름: SC은행, 예금주: 손흥민, 계좌번호: 047-09-576781, 잔고: 4,000,000원\n",
-            "은행이름: SC은행, 예금주: 손흥민, 계좌번호: 047-09-576781, 잔고: 5,050,000.0원\n"
+            "은행이름: SC은행, 예금주: 손흥민, 계좌번호: 472-66-931799, 잔고: 2,000,000원\n",
+            "은행이름: SC은행, 예금주: 손흥민, 계좌번호: 472-66-931799, 잔고: 3,000,000원\n",
+            "은행이름: SC은행, 예금주: 손흥민, 계좌번호: 472-66-931799, 잔고: 4,000,000원\n",
+            "은행이름: SC은행, 예금주: 손흥민, 계좌번호: 472-66-931799, 잔고: 5,050,000원\n"
           ]
         }
       ]
@@ -333,9 +344,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "O4m9RyDSQIB6",
-        "outputId": "1b947284-4dcf-4eb3-aa5a-2ef3c08b7b51"
+        "outputId": "8f7f5b87-ae47-48b0-d7da-4d4eb229a103"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -357,21 +368,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5JiippBwQMED",
-        "outputId": "e04f4cc5-09f5-4283-e717-9bad64c3965c"
+        "outputId": "363772ac-a000-402d-a103-871b3b761cde"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2024-01-08 06:02:49 AM - 입금: 1,000,000원\n",
-            "2024-01-08 06:02:55 AM - 출금: 1,000,000원\n",
-            "2024-01-08 06:03:07 AM - 입금: 1,000,000원\n",
-            "2024-01-08 06:03:07 AM - 입금: 1,000,000원\n",
-            "2024-01-08 06:03:07 AM - 입금: 1,000,000원\n",
-            "2024-01-08 06:03:07 AM - 입금: 1,000,000원\n",
-            "잔고: 5,050,000.0원\n"
+            "2024-01-08 07:40:43 AM - 입금: 1,000,000원\n",
+            "2024-01-08 07:40:46 AM - 출금: 1,000,000원\n",
+            "2024-01-08 07:40:59 AM - 입금: 1,000,000원\n",
+            "2024-01-08 07:40:59 AM - 입금: 1,000,000원\n",
+            "2024-01-08 07:40:59 AM - 입금: 1,000,000원\n",
+            "2024-01-08 07:40:59 AM - 입금: 1,000,000원\n",
+            "잔고: 5,050,000원\n"
           ]
         }
       ]
@@ -387,15 +398,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OJFxvvExQQCO",
-        "outputId": "3ad97bc1-14e9-4569-8803-f51e16067566"
+        "outputId": "0b5ec71a-697c-48af-d7d4-d1880fa86078"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1회 출금 한도를 입력하세요, 초기 한도는 500만원 입니다.34ㄴㅎ\n",
+            "1회 출금 한도를 입력하세요, 초기 한도는 500만원 입니다.ㅁㄴㅇㄹㅎㅁ\n",
             "오류 : 잘못된 입력입니다. 숫자를 입력하세요. 출금한도 설정을 취소합니다.\n"
           ]
         }
@@ -412,15 +423,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "v5KVCAbcg2pw",
-        "outputId": "304d3ef9-2b65-4537-d1e8-fcac7340d1b2"
+        "outputId": "702dd324-f3bd-477a-e561-79005d18a799"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1회 출금 한도를 입력하세요, 초기 한도는 500만원 입니다.-134\n",
+            "1회 출금 한도를 입력하세요, 초기 한도는 500만원 입니다.-100\n",
             "오류 : 음수 값은 허용되지 않습니다. 출금한도 설정을 취소합니다.\n"
           ]
         }
@@ -445,6 +456,15 @@
       "metadata": {
         "id": "QlgksK6iJQHU"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "b6ufD4MZBNdn"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
